lints = { workspace = true }

[package]
name = "oracle"
version = "0.5.23"
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["build", "@agnostic"], always-on = ["contract"], include-rest = false },
    { tags = ["ci", "@agnostic"], feature-groups = ["contract"], include-rest = false },
    { tags = ["ci", "@agnostic"], feature-groups = ["stubs"], include-rest = false, generics = { "stubs" = ["stub_alarms", "stub_price", "stub_swap"] } },
]

[package.metadata.cargo-each.feature-groups]
contract = { members = ["contract", "contract_testing", "internal.test.contract"], at-least-one = true, mutually-exclusive = true }
stub_alarms = { members = ["stub_alarms", "stub_alarms_testing", "internal.test.stub_alarms"], at-least-one = false, mutually-exclusive = true }
stub_price = { members = ["stub_price", "stub_price_testing", "internal.test.stub_price"], at-least-one = false, mutually-exclusive = true }
stub_swap = { members = ["stub_swap", "stub_swap_testing", "internal.test.stub_swap"], at-least-one = false, mutually-exclusive = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
contract = [
    "stub_alarms",
    "stub_price",
    "stub_swap",
    "dep:sdk",
    "sdk/contract",
    "dep:serde",
    "dep:tree",
]
contract_testing = [
    "stub_alarms_testing",
    "stub_price_testing",
    "stub_swap_testing",
    "contract",
]
"internal.test.contract" = [
    "contract_testing",
]
stub_alarms = [
    "dep:currency",
    "dep:finance",
    "dep:serde",
    "dep:thiserror",
]
stub_alarms_testing = [
    "stub_alarms"
]
"internal.test.stub_alarms" = [
    "stub_alarms",
]
stub_price = [
]
stub_price_testing = [
    "stub_price"
]
"internal.test.stub_price" = [
    "stub_price",
]
stub_swap = [
]
stub_swap_testing = [
    "stub_swap"
]
"internal.test.stub_swap" = [
    "stub_swap",
]

[dependencies]
currencies = { workspace = true, optional = true }
currency = { workspace = true, optional = true }
finance = { workspace = true, optional = true }
marketprice = { workspace = true, optional = true }
oracle-platform = { workspace = true, optional = true }
platform = { workspace = true, optional = true }
sdk = { workspace = true, optional = true }
tree = { workspace = true, optional = true }
versioning = { workspace = true, optional = true, features = ["protocol_contract"] }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true, optional = true }

thiserror = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
